# adc_systemc

./: README.md
lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lab3/include/: adc.h  modules.h  ref_src.h  tlm_com.h
lab3/src/: CMakeLists.txt  Makefile  adc.cpp  cmake_install.cmake  main.cpp  mainold.cpp  master_adc.cpp  master_tlm.cpp  slave_adc.cpp  slave_tlm.cpp
pga_example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.txt
pga_example/cmake-files/: FindSystemCAMS.cmake
pga_example/test_modules/: CMakeLists.txt  main.cpp  modules.h  stimuli.h
tlm_adc_sin_example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tlm_adc_sin_example/include/: conv_tdf_sc.h  tlm_com.h
tlm_adc_sin_example/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
